k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: 2048-app
  labels:
    app: 2048-app
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: 2048-app
  template:
    metadata:
      labels:
        app: 2048-app
    spec:
      containers:
      - name: 2048-app
        image: 848153448908.dkr.ecr.eu-west-2.amazonaws.com/eks-2048:latest

        ports:
        - containerPort: 80
