k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-service
spec:
  selector:
    app: 2048-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
